--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngrx/effects": "6.1.0",
+    "@ngrx/store": "6.1.0",
+    "@ngrx/store-devtools": "6.1.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.6",
-    "typescript": "~2.7.2",
+    "@angular-devkit/core": "0.6.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/cli": "~6.0.7",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
@@ -42,7 +45,9 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "rxjs-tslint": "0.1.5",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "2.7.2"
   }
 }
